Scrollbar added correctly

--- a/webapp/src/components/ChatBot/Popchat.css
+++ b/webapp/src/components/ChatBot/Popchat.css
@@ -10,7 +10,8 @@
   #chatCon .chat-box {
     /* display: none; */
     width: 100%;
-    height: 500px;
+    /*height: 500px;*/
+    height: 480px;
     border-radius: 25px;
     background-color: #eee;
   }
@@ -57,6 +58,10 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+
+
+    margin-top: 10px;
+    padding-bottom: 0px;
   }
   
   #chatCon .chat-box .footer input {
@@ -135,14 +140,13 @@
   
   /* Aumentar el espacio entre los mensajes */
 #chatCon .chat-box .msg-area p {
-  margin-bottom: 15px; /* Espacio entre mensajes */
-  margin-top: 0;      /* Sin espacio superior para mantener la densidad */
+  margin-top: 15px; /* Espacio entre mensajes */
   position: relative;  /* Para posicionamiento relativo de elementos internos */
 }
 
 /* Último mensaje sin margen inferior */
 #chatCon .chat-box .msg-area p:last-of-type {
-  margin-bottom: 5px;
+  margin-bottom: 12px;
 }
 
 /* Asegurar que los mensajes y burbujas tengan espacio adecuado */
@@ -156,3 +160,12 @@
   word-wrap: break-word; /* Permitir que el texto se envuelva */
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); /* Sombra sutil para profundidad */
 }
+
+
+#chatCon .chat-box .msg-area .left{
+  margin-left: 5px;
+}
+#chatCon .chat-box .msg-area .right{
+  margin-right: 5px;
+}
+
